--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -46,7 +46,7 @@
           <field name="message_unread_counter" widget="count_counter"/>
           <field name="timer_start" widget="timer_timer"/>
           <p>
-            <span role="img" class="fa fa-bus" aria-hidden="true">bus</span>
+            <span role="img" class="fa fa-bus">bus</span>
             <span class="fa fa-cart-arrow-down" aria-hidden="true">cart</span>
             <span class="fa fa-laptop" aria-hidden="true">laptop</span>
             <span role="img" class="glyphicon glyphicon-road">road</span>
