--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -90,6 +90,7 @@
           <field name="dummy_field" invisible="1"/>
           <field name="message_unread_counter" />
           <field name="message_unread"/>
+          <field name="order_type"/>
         </field>
       </field>
     </record>
