--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -42,10 +42,10 @@
         <xpath expr="/kanban/templates/t/div//div[@class='oe_kanban_content']" position="after">
           <field name="partner_id" widget="res_partner_many2one"/>
           <br/>
-          <span t-if="record.order_type">
-            <span class="fa fa-bus"></span>
-            <span class="fa fa-cart-arrow-down"></span>
-            <span class="fa fa-laptop"></span>
+          <span>
+            <span t-if="record.order_type.value == 'delivery'" class="fa fa-bus"></span>
+            <span t-if="record.order_type == 'store'" class="fa fa-cart-arrow-down"></span>
+            <span t-if="record.order_type == 'online'" class="fa fa-laptop"></span>
           </span>
           <span class="o_MessagingMenu_icon fa fa-comments"></span>
           <field name="message_unread_counter" widget="count_counter"/>
