--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -43,9 +43,9 @@
           <field name="partner_id" widget="res_partner_many2one"/>
           <br/>
           <span>
-            <span t-if="record.order_type.value == 'delivery'" class="fa fa-bus"></span>
-            <span t-if="record.order_type == 'store'" class="fa fa-cart-arrow-down"></span>
-            <span t-if="record.order_type == 'online'" class="fa fa-laptop"></span>
+            <span t-if="order_type.value == 'delivery'" class="fa fa-bus"></span>
+            <span t-if="order_type == 'store'" class="fa fa-cart-arrow-down"></span>
+            <span t-if="order_type == 'online'" class="fa fa-laptop"></span>
           </span>
           <span class="o_MessagingMenu_icon fa fa-comments"></span>
           <field name="message_unread_counter" widget="count_counter"/>
