--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -43,7 +43,7 @@
           <field name="partner_id" widget="res_partner_many2one"/>
           <br/>
           <span>
-            <span t-if="order_type.value == 'delivery'" class="fa fa-bus"></span>
+            <span t-if="order_type == 'delivery'" class="fa fa-bus"></span>
             <span t-if="order_type == 'store'" class="fa fa-cart-arrow-down"></span>
             <span t-if="order_type == 'online'" class="fa fa-laptop"></span>
           </span>
