--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -96,6 +96,7 @@
           <field name="dummy_field" invisible="1"/>
           <field name="message_unread_counter" />
           <field name="message_unread"/>
+          <field name="message_channel_ids"/>
           <field name="order_type"/>
         </field>
       </field>
