--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -91,13 +91,16 @@
       <field name="inherit_id" ref="project.view_task_form2"/>
       <field name="type">form</field>
       <field name="arch" type="xml">
+        <xpath expr="" position="inside">
+          <button name="build_cart" type="object" string="Build Cart" class="btn-primary" attrs="{'invisible':[('sale_order','!=',False)]}"></button>
+        </xpath>
         <field name="partner_id" position="after">
           <field name="sales_order" string="Sales Order" attrs="{'invisible':[('sales_order', '=', False)]}"/>
           <field name="dummy_field" invisible="1"/>
-          <field name="message_unread_counter" />
+          <!-- <field name="message_unread_counter" />
           <field name="message_unread"/>
           <field name="message_channel_ids"/>
-          <field name="order_type"/>
+          <field name="order_type"/> -->
         </field>
       </field>
     </record>
