--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -92,6 +92,7 @@
       <field name="type">form</field>
       <field name="arch" type="xml">
         <xpath expr="//header/button" position="after">
+          <field name="sales_order" invisible="1"/>
           <button name="build_cart" type="object" string="Build Cart" class="btn-primary" attrs="{'invisible':[('sale_order','!=',False)]}"></button>
         </xpath>
         <field name="partner_id" position="after">
