--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -76,6 +76,7 @@
       <field name="arch" type="xml">
         <field name="name" position="before">
           <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/>
+          <field name="scan_text" string="Scan DL"/>
         </field>
         <field name="name" position="after">
           <field name="partner_id"/>
