--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -77,6 +77,7 @@
         <field name="name" position="before">
           <!-- <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/> -->
           <field name="scan_text" string="Scan DL"/>
+          <field name="_barcode_scanned" widget="barcode_handler" invisible="1"/>
         </field>
         <field name="name" position="after">
           <field name="partner_id"/>
