--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -99,6 +99,7 @@
           <button name="build_cart" type="object" string="Build Cart" class="btn-primary" attrs="{'invisible':[('sales_order','!=',False)]}"></button>
         </xpath>
         <field name="partner_id" position="after">
+          <field name="_barcode_scanned" widget="barcode_handler" invisible="1"/>
           <field name="sales_order" string="Sales Order" attrs="{'invisible':[('sales_order', '=', False)]}"/>
           <field name="dummy_field" invisible="1"/>
           <!-- <field name="message_unread_counter" />
