--- a/LumeSales/views/views.xml
+++ b/LumeSales/views/views.xml
@@ -76,8 +76,8 @@
       <field name="arch" type="xml">
         <field name="name" position="before">
           <!-- <button name="%(scan_dl_wizard)d" string="Scan DL" type="action" class="btn-primary"/> -->
-          <field name="scan_text" string="Scan DL"/>
-          <field name="_barcode_scanned" widget="barcode_handler" invisible="1"/>
+          <!-- <field name="scan_text" string="Scan DL"/> -->
+          <field name="_barcode_scanned" string="Scan DL" widget="barcode_handler" invisible="1"/>
         </field>
         <field name="name" position="after">
           <field name="partner_id"/>
@@ -99,7 +99,6 @@
           <button name="build_cart" type="object" string="Build Cart" class="btn-primary" attrs="{'invisible':[('sales_order','!=',False)]}"></button>
         </xpath>
         <field name="partner_id" position="after">
-          <field name="_barcode_scanned" widget="barcode_handler" invisible="1"/>
           <field name="sales_order" string="Sales Order" attrs="{'invisible':[('sales_order', '=', False)]}"/>
           <field name="dummy_field" invisible="1"/>
           <!-- <field name="message_unread_counter" />
