patch to log event

--- a/pos_test/views/assets.xml
+++ b/pos_test/views/assets.xml
@@ -5,6 +5,7 @@
                 <!-- place this content after the last script tag -->
                 <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
                 <script type="text/javascript" src="/pos_test/static/js/button.js"></script>
+                <script type="text/javascript" src="/pos_test/static/js/patch.js"></script>
             </xpath>
         </template>
     </data>
