--- a/pos_test/views/assets.xml
+++ b/pos_test/views/assets.xml
@@ -1,6 +1,6 @@
 <odoo>
     <data>
-        <template id="assets_backend" name="pos_test assets" inherit_id="web.assets_backend">
+        <template id="assets_common" name="pos_test assets" inherit_id="web.assets_common">
             <xpath expr="//script[last()]" position="after"> 
                 <!-- place this content after the last script tag -->
                 <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
