Add filters on pos screen

--- a/pos_test/views/point_of_sale.xml
+++ b/pos_test/views/point_of_sale.xml
@@ -25,5 +25,31 @@
                 </xpath>
             </field>
         </record>
+
+        <record id="view_pos_search_inherit" model="ir.ui.view">
+            <field name="name">pos.search.inherit</field>
+            <field name="model">pos.config</field>
+            <field name="inherit_id" ref="point_of_sale.view_pos_config_search"/>
+            <field name="type">search</field>
+            <field name="arch" type="xml">
+              <xpath expr="//search/filter" position="before">
+                <filter string="My Store" name="my_store_pos" domain="[('project_id.allowed_user_ids','=',uid)]"/>
+              </xpath>
+            </field>
+          </record>
+
+          <record id="action_pos_config_filters" model="ir.actions.act_window">
+            <field name="name">Point of Sale</field>
+            <field name="type">ir.actions.act_window</field>
+            <field name="res_model">pos.config</field>
+            <field name="view_mode">kanban,tree,form</field>
+            <field name="inherit_id" ref="point_of_sale.action_pos_config_kanban"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[last()]" position="after">
+                    <field name="domain">[('project_id.allowed_user_ids','=',uid)]</field>
+                    <field name="context">{"search_default_my_store_pos":1}</field>
+                </xpath>
+            </field>
+          </record>
     </data>
   </odoo>
