--- a/LumeSales/views/assets.xml
+++ b/LumeSales/views/assets.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <template id="assets_backend" name="demo assets" inherit_id="web.assets_backend">
+    <template id="assets_common" name="Lume assets" inherit_id="web.assets_common">
         <xpath expr="//script[last()]" position="after"> 
             <!-- place this content after the last script tag -->
             <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
