--- a/lume_pos/views/assets.xml
+++ b/lume_pos/views/assets.xml
@@ -4,7 +4,7 @@
             <xpath expr="//script[last()]" position="after"> 
                 <!-- place this content after the last script tag -->
                 <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
-                <script type="text/javascript" src="/pos_test/static/js/button.js"></script>
+                <!-- <script type="text/javascript" src="/pos_test/static/js/button.js"></script> -->
                 <script type="text/javascript" src="/pos_test/static/js/patch.js"></script>
                 <script type="text/javascript" src="/pos_test/static/js/update_orders.js"></script>
             </xpath>
