--- a/lume_sales/views/views.xml
+++ b/lume_sales/views/views.xml
@@ -69,6 +69,20 @@
           <attribute name="options">{'fold_field': 'fold'}</attribute>
           <attribute name="readonly">1</attribute>
         </xpath>
+        <!-- Move customer to left hand side -->
+        <xpath expr="//field[@name='is_project_map_empty']" position="before">
+          <field name="partner_id" position="move"/>
+        </xpath>
+        <!-- Move other stuff to right hand side -->
+        <xpath expr="//field[@name='active']" position="before">
+          <field name="project_id" position="move"/>
+          <field name="user_id" position="move"/>
+          <field name="parent_id" position="move"/>
+          <field name="date_deadline" position="move"/>
+          <field name="recurring_task" position="move"/>
+          <field name="tag_ids" position="move"/>
+        </xpath>
+
         <field name="partner_id" position="after">
           <field name="sales_order" string="Sales Order" attrs="{'invisible':[('sales_order', '=', False)]}"/>
           <field name="dummy_field" invisible="1"/>
