--- a/lume_sales/views/assets.xml
+++ b/lume_sales/views/assets.xml
@@ -4,6 +4,7 @@
             <!-- place this content after the last script tag -->
             <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
             <script type="text/javascript" src="lume_sales/js/demo.js"></script>
+            <script type="text/javascript" src="lume_sales/js/kanban_refresh.js"></script>
             <script type="text/javascript" src="lume_sales/js/unread_messages.js"></script>
             <script type="text/javascript" src="lume_sales/js/live_timer.js"></script>
         </xpath>
