--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -26,11 +26,11 @@
             <field name="timer_start" widget="live_timer"/>
             <br/>
             <span>
-              <span t-if="record.order_type.raw_value == 'delivery'" class="fa fa-bus"></span>
-              <span t-if="record.order_type.raw_value == 'store'" class="fa fa-cart-arrow-down"></span>
-              <span t-if="record.order_type.raw_value == 'online'" class="fa fa-laptop"></span>
+              <span t-if="record.order_type.raw_value == 'delivery'" class="fa fa-bus" title="delivery"></span>
+              <span t-if="record.order_type.raw_value == 'store'" class="fa fa-cart-arrow-down" title="store"></span>
+              <span t-if="record.order_type.raw_value == 'online'" class="fa fa-laptop" title="online"></span>
             </span>
-            <span class="o_MessagingMenu_icon fa fa-comments"></span>
+            <span class="o_MessagingMenu_icon fa fa-comments" title="comment bubble"></span>
             <field name="message_unread_counter" widget="count_counter"/>
           </xpath>
           <xpath expr="(/kanban/templates/t/div//div[@class='oe_kanban_bottom_right']/field)[2]" position="replace">
