Revamp so line widget

--- a/lume_sales/views/assets.xml
+++ b/lume_sales/views/assets.xml
@@ -7,6 +7,7 @@
             <script type="text/javascript" src="lume_sales/js/kanban_refresh.js"></script>
             <script type="text/javascript" src="lume_sales/js/unread_messages.js"></script>
             <script type="text/javascript" src="lume_sales/js/live_timer.js"></script>
+            <script type="text/javascript" src="lume_sales/js/so_section_and_note.js"></script>
         </xpath>
     </template>
     </odoo>
