--- a/lume_sales/views/assets.xml
+++ b/lume_sales/views/assets.xml
@@ -1,6 +1,6 @@
 <odoo>
     <template id="assets_backend" name="lume_sales assets" inherit_id="web.assets_backend">
-        <xpath expr="//script[last()]" position="after"> 
+        <xpath expr="." position="inside"> 
             <!-- place this content after the last script tag -->
             <!-- <link rel="stylesheet" type="text/scss" href="/helpdesk/static/src/scss/helpdesk.scss"/> -->
             <script type="text/javascript" src="lume_sales/js/demo.js"></script>
@@ -10,4 +10,4 @@
             <script type="text/javascript" src="lume_sales/js/so_section_and_note.js"></script>
         </xpath>
     </template>
-    </odoo>
+</odoo>
