Sale Order / Field Service test combo

--- a/lume_sales/views/assets.xml
+++ b/lume_sales/views/assets.xml
@@ -9,6 +9,10 @@
             <script type="text/javascript" src="lume_sales/static/src/js/live_timer.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/so_section_and_note.js"></script>
             <script type="text/javascript" src="lume_sales/static/src/js/project_kanban.js"></script>
+
+            <script type="text/javascript" src="lume_sales/static/src/js/product_catalog/lpc_product_quantity.js"></script>
+            <script type="text/javascript" src="lume_sales/static/src/js/product_catalog/model.js"></script>
+            <script type="text/javascript" src="lume_sales/static/src/js/product_catalog/view.js"></script>
         </xpath>
     </template>
 </odoo>
