clean up catalog

--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -6,7 +6,7 @@
         <field name="model">product.product</field>
         <field name="priority">999</field>
         <field name="arch" type="xml">
-            <kanban edit="0" class="o_kanban_mobile o_fsm_material_kanban" js_class="lpc_product_kanban">
+            <kanban edit="0" create="0" class="o_kanban_mobile o_fsm_material_kanban" js_class="lpc_product_kanban">
                 <field name="id"/>
                 <field name="name"/>
                 <field name="product_template_attribute_value_ids"/>
@@ -54,6 +54,7 @@
                         </div>
                     </t>
                 </templates>
+                <button string="Done" special="cancel"/>
             </kanban>
         </field>
     </record>
