--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -16,9 +16,9 @@
                 </xpath>
                 <!-- Custom Add Product Button -->
                 <field name="order_line" position="after">
-                    <button name="open_catalog" string="Add a Product (popup)" class="btn-primary oe_edit_only" type="object"/>
-                    <span style="margin: 5px;"/>
-                    <button name="open_catalogV2" string="Add a Product (window)" class="btn-primary oe_edit_only" type="object"/>
+                    <!-- <button name="open_catalog" string="Add a Product (popup)" class="btn-primary oe_edit_only" type="object"/>
+                    <span style="margin: 5px;"/> -->
+                    <button name="open_catalogV2" string="Add a Product" class="btn-primary oe_edit_only" type="object"/>
                 </field>
                 <xpath expr="//control" position="replace"></xpath>
                 <!-- <field name="order_line" position="attributes">
