--- a/lume_sales/views/product_catalog.xml
+++ b/lume_sales/views/product_catalog.xml
@@ -28,7 +28,7 @@
                                             <field name="product_template_attribute_value_ids" groups="product.group_product_variant"/>
                                         </div>
                                         <ul>
-                                            <li><strong>Price: <field name="price" widget="monetary" options="{'currency_field': 'currency_id'}"></field></strong></li>
+                                            <li><strong>Price: <field name="list_price" widget="monetary" options="{'currency_field': 'currency_id'}"></field></strong></li>
                                             <field name="currency_id" invisible="True"/>
                                         </ul>
                                     </div>
@@ -64,12 +64,12 @@
         <field name="model">product.product</field>
         <field name="inherit_id" ref="product.product_search_form_view"/>
         <field name="arch" type="xml">
-              <field name="name" position="after">
+            <field name="name" position="after">
                 <searchpanel>
                     <field name="categ_id"/>
                     <!-- <field name="manager_id" select="multi" domain="[('department_id', '=', department_id)]"/> -->
                 </searchpanel>
-              </field>
+            </field>
         </field>
     </record>
     </data>
